fix #1076: Add support for palantir-java-format